2008-08-03 Braden McDaniel  <braden@endoframe.com>

	* tests/Makefile.am: Only compile Java test programs if Script
	node Java support was enabled.

2008-07-26 Braden McDaniel  <braden@endoframe.com>

	Fixed some potential crashes when processing coordinate, color,
	and normal indices.

	* src/libopenvrml-gl/openvrml/gl/viewer.cpp
	(insertShellTess(GLUtesselator &, const std::vector<vertex_data>&,
	const std::vector<openvrml::int32> &, bool, const
	std::vector<openvrml::color> &, const
	std::vector<openvrml::int32>&, bool, const
	std::vector<openvrml::vec3f> &, const
	std::vector<openvrml::int32>&)): Advance past invalid coordinate
	indices.
	(openvrml::gl::viewer::do_insert_shell(unsigned int, const
	std::vector<vec3f> &, const std::vector<int32> &, const
	std::vector<color> &, const std::vector<int32> &, const
	std::vector<vec3f> & const std::vector<int32> &, const
	std::vector<vec2f> &, const std::vector<int32> &)): Advance past
	-1 entries and invalid coordinate indices in the colorIndex and
	normalIndex fields.

2008-07-23 Braden McDaniel  <braden@endoframe.com>

	Use GtkBuilder in openvrml-player instead of libglade.  Note that
	this changes the environment variable used to locate the UI
	definition from OPENVRML_PLAYER_GLADEDIR to OPENVRML_PLAYER_UIDIR.

	* configure.ac: Removed check for libglade; require gtk+-2.0 >=
	2.12.
	* src/Makefile.am
	(openvrml_player_openvrml_player_CXXFLAGS): Removed GLADE_CFLAGS.
	(openvrml_player_openvrml_player_LDFLAGS): Removed GLADE_LIBS.
	(openvrml_player_gladedir): Removed; replaced with
	openvrml_player_uidir.
	(openvrml_player_glade_DATA): Removed; replaced with
	openvrml_player_ui_DATA.
	(openvrml_player_uidir): Added.
	(openvrml_player_ui_DATA): Added.
	(EXTRA_DIST): Distribute openvrml_player_ui_DATA files.
	* src/openvrml-player/filechooserdialog.cpp
	(openvrml_player_file_chooser_dialog_get_type()): Removed; use
	definition provided by G_DEFINE_TYPE instead.